lab1/Test/L1-A-11-62.cmm
struct {
  struct FhyjmOeMPW_bMr {
  }RNCvLctNmy2NbswsV3A ;
  int VwZ5ScX59XJjbJC ;
  struct BRlUWxRx44XbVz1 eiv ;
  int m ;
  int wA3fi6suzSqlxf ;
  int zLpwMRd3k8 , a49qTF4K0qqQ0Y7ky_ar , WaGa5vU_71 
    ;
 }olrtgDU2bATiyqzGBVNe ( int Y_j8KsilwiN0L91s3_v ) 
  {
  float NdS68fda8Ey [ ] = KufLqVjmN ;
  if ( IL )   return Utu_fyc ;
else   if ( b1crMmRowEprdr > fPD6IkDwdE88o + i_ [ 
    Lq1WZIKV7ry64nBm = x || TyikQmtOoz0oL9 && KyLgj6 != 
    p9VZeqc_Tqh - iZgImxbO_8Jf6 * c ( typOcssaEk , Tskf7KNfMKkZG_AfuR 
    + MiAWsxTp3vA3mA_m1g [ fJFCZkw == XZtNraba93Az ( M5SxITNJJ 
    = vNbqd2U2s8lDSyT = pIQbUbNBYBb || p8yHSwmT0NHzTyrAJHBq 
    <= pW - ( RgfvlwHkcXA861bDVV >= Tgm9S + FWnMj1Ya1gtQul 
    ) ) < 53646590 ] . HIlpW_jTNTsy ! HE69n4idz074 ( ) 
    ) / ! - 818968770.1612613076 ] ) {
  }

}
int z4oqqBn1ruEl 
;
int ;
int ;
int YFY , VgpO75oKve3f 

;
int YwyjHAXzFKadIi ( int Tak3HDYYDp3_ThSR , int d 
  ) {
}
int K ( ) {
  ABiv0fpw1P6X ;
  p5Zyu ;
  hBANai6B3pR rlLkn ;
  _TBi1tBfzx0F8XPP6Y ;
  if ( VwX2YQQzc )   if ( nGsYTEwFBHn5JYulti )   ca8 
    ;
else   while ( UU7CEX4tQ )   KoRQ0uBc2S6UYp ;


else   if ( wQwPtY )   SYeOUK ;


}
